Fixed testimonial spacing desktop

--- a/themes/sports-on-campus/style.css
+++ b/themes/sports-on-campus/style.css
@@ -2372,7 +2372,7 @@ button[type='submit'] {
     margin: auto;
     margin-bottom: 8em; }
   .page-template-archive-testimonial .wp-block-quote p, .tax-testimonial_category .wp-block-quote p {
-    font-size: 21px; }
+    font-size: 24px; }
   .page-template-archive-testimonial .sample-picture, .tax-testimonial_category .sample-picture {
     height: 17em; }
   .page-template-archive-testimonial .test-cluster, .tax-testimonial_category .test-cluster {
